--- a/src/components/GoogleSingIn/GoogleSingIn.module.css
+++ b/src/components/GoogleSingIn/GoogleSingIn.module.css
@@ -4,11 +4,12 @@
     display: flex;
     align-items: center;
     margin: 0 auto;
-    padding: 10px 20px;
+    padding: 8px 20px 10px ;
+ 
     background: #F5F7FA;
     color: #707375;
     border: none;
-    font-family: Roboto;
+    font-family: 'Roboto';
     font-weight: 700;
     font-size: 16px;
     line-height: calc(38px/16px);
@@ -17,5 +18,5 @@
 .googleLogo {
     width:18px;
     height: 18px;
-    margin-right: 17px;
+    margin-right: 15px;
 }
