--- a/src/components/GoogleSingIn/GoogleSingIn.module.css
+++ b/src/components/GoogleSingIn/GoogleSingIn.module.css
@@ -13,10 +13,21 @@
     font-weight: 700;
     font-size: 16px;
     line-height: calc(38px/16px);
+    cursor: pointer;
+}
+
+.btn:hover,
+.btn:focus {
+  transform: scale(1.03);
 }
 
 .googleLogo {
     width:18px;
     height: 18px;
     margin-right: 15px;
+}
+@media screen and (min-width: 768px) {
+    .btn{
+        box-shadow: 0px 2px 2px rgba(9, 30, 63, 0.15);
+    }
 }
