--- a/src/components/AppDescription/AppDescription.module.css
+++ b/src/components/AppDescription/AppDescription.module.css
@@ -86,3 +86,8 @@ img{
         display: none;
     }
 }
+@media screen and (min-width: 1280px) {
+    .contentWrap{
+        padding-top: 170px;
+    }
+}
