--- a/src/components/SingUpForm/SingUpForm.module.css
+++ b/src/components/SingUpForm/SingUpForm.module.css
@@ -123,3 +123,16 @@
     height: 60px;
   }
 }
+
+@media screen and (min-width: 1280px) {
+  .formWrap{
+    width: 565px;
+    height: 850px;
+    padding: 120px auto 60px;
+    background-image: linear-gradient(
+        rgba(9, 30, 63, 0.8),
+        rgba(9, 30, 63, 0.8)
+    ),
+    url(../../images/registr-pic-desctop.jpg);
+  }
+}
