--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import '../node_modules/modern-normalize/modern-normalize.css'; /* bring in normalize.css styles */
 
 /* временно для проверки вёрстки */
-@import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap');
+/* @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap'); */
 
 body {
   margin: 0;
