feat: add active links

--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -55,6 +55,11 @@
   }
 }
 
+.activeTraining {
+  composes: trainig;
+  color: #f5f7fa;
+}
+
 .home {
   cursor: pointer;
   border-right: 1px solid #e0e5eb;
@@ -68,6 +73,11 @@
   @media screen and (min-width: 768px) {
     margin-right: 19px;
   }
+}
+
+.activeHome {
+  composes: trainig;
+  color: #f5f7fa;
 }
 
 .user {
