--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,18 @@
-@import '../node_modules/modern-normalize/modern-normalize.css'; /* bring in normalize.css styles */
+@import "../node_modules/modern-normalize/modern-normalize.css"; /* bring in normalize.css styles */
+@import "./assets/styles/reset.scss";
 
 /* временно для проверки вёрстки */
 /* @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Montserrat:wght@400;500;700;800&family=Roboto:wght@400;700&display=swap'); */
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans",
+    "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  padding-bottom: 30px;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New", monospace;
 }
-
