--- a/src/components/AppDescription/AppDescription.module.css
+++ b/src/components/AppDescription/AppDescription.module.css
@@ -85,6 +85,9 @@ img{
     .btnWrap{
         display: none;
     }
+    .switcher{
+        display: none;
+    }
 }
 @media screen and (min-width: 1280px) {
     .contentWrap{
