--- a/src/components/SignInForm/SignInForm.module.css
+++ b/src/components/SignInForm/SignInForm.module.css
@@ -82,6 +82,7 @@
   text-align: center;
   margin-top: 20px;
   color: #FF6B08;
+  text-decoration: underline;
 }
 
 @media screen and (min-width: 768px) {
