--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -3,11 +3,12 @@
   height: 60px;
   box-shadow: 0px 2px 3px rgba(9, 30, 63, 0.1);
   padding-left: 25px;
-  padding-top: 11px;
-  padding-bottom: 11px;
+  padding-top: 16px;
+  padding-bottom: 17px;
 }
 
 .headerNav {
   display: flex;
   align-items: center;
+  // justify-content: center;
 }
