feat/add-header-user

--- a/src/components/LogOut/LogOut.module.css
+++ b/src/components/LogOut/LogOut.module.css
@@ -1,5 +1,5 @@
 .btnLogout {
-  font-family: Montserrat;
+  font-family: 'Montserrat';
   font-size: 14px;
   font-weight: 300;
   line-height: 38px;
