--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -5,10 +5,10 @@
   padding-left: 25px;
   padding-top: 16px;
   padding-bottom: 17px;
+  padding-right: 25px;
 }
 
 .headerNav {
   display: flex;
   align-items: center;
-  // justify-content: center;
 }
