--- a/src/components/NavLogo/NavLogo.module.scss
+++ b/src/components/NavLogo/NavLogo.module.scss
@@ -1,6 +1,10 @@
 .logo {
   cursor: pointer;
-  @media screen and(max-width: 767px) {
-    margin-right: 60px;
+  margin-right: 60px;
+  @media screen and(min-width: 768px) {
+    margin-right: 255px;
+  }
+  @media screen and(min-width: 1280px) {
+    margin-right: 511px;
   }
 }
