--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -27,16 +27,64 @@
   }
 }
 
-.firstUser {
-  display: none;
-  @media screen and (min-width: 768px) {
-    display: block;
-    margin-left: 255px;
-    margin-right: 260px;
+.symbolWrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 33px;
+  height: 33px;
+  background-color: #f5f7fa;
+  border-radius: 50%;
+  color: #242a37;
+  margin-right: 11px;
+  @media screen and (max-width: 767px) {
+    display: none;
   }
-  @media screen and (min-width: 1280px) {
+}
+
+.symbol {
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 2.7;
+}
+
+.secSymbolWrap {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 33px;
+  height: 33px;
+  background-color: #f5f7fa;
+  border-radius: 50%;
+  color: #242a37;
+  margin-right: 11px;
+  @media screen and(min-width: 768px) {
+    display: none;
+  }
+}
+
+.secSymbol {
+  font-family: "Montserrat";
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 2.7;
+}
+
+.nameWrap {
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
+  font-family: "Montserrat";
+  font-weight: 300;
+  font-size: 14px;
+  line-height: 2.7;
+  color: #242a37;
+  @media screen and(min-width: 768px) {
+    margin-right: 151px;
+  }
+  @media screen and(min-width: 1280px) {
     margin-right: 407px;
-    margin-left: 511px;
   }
 }
 
@@ -49,9 +97,6 @@
     fill: #f5f7fa;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
-  @media screen and (min-width: 1280px) {
-    margin-right: 14px;
   }
 }
 
@@ -76,12 +121,4 @@
 
 .activeHome {
   color: #f5f7fa;
-}
-
-.user {
-  cursor: pointer;
-  margin-right: 14px;
-  @media screen and (min-width: 768px) {
-    display: none;
-  }
 }
