--- a/src/components/NavLogo/NavLogo.module.scss
+++ b/src/components/NavLogo/NavLogo.module.scss
@@ -2,9 +2,6 @@
   cursor: pointer;
   margin-right: 60px;
   @media screen and(min-width: 768px) {
-    margin-right: 255px;
-  }
-  @media screen and(min-width: 1280px) {
-    margin-right: 511px;
+    margin-right: 0;
   }
 }
