--- a/src/components/NavLogo/NavLogo.module.scss
+++ b/src/components/NavLogo/NavLogo.module.scss
@@ -1,7 +1,6 @@
 .logo {
   cursor: pointer;
-  margin-right: 60px;
-  @media screen and(min-width: 768px) {
-    margin-right: 0;
+  @media screen and(max-width: 767px) {
+    margin-right: 60px;
   }
 }
