--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -110,17 +110,20 @@
 
 .home {
   cursor: pointer;
-  border-right: 1px solid #e0e5eb;
-  margin-right: 13px;
+  margin-right: 1px;
   &:hover,
   &:focus {
     fill: #f5f7fa;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
-  @media screen and (min-width: 768px) {
-    margin-right: 19px;
-  }
+}
+
+.lineRight {
+  width: 33px;
+  height: 0;
+  border: 0.5px solid #e0e5eb;
+  transform: rotate(90deg);
 }
 
 .activeHome {
