--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -92,40 +92,59 @@
   }
 }
 
-.training {
-  cursor: pointer;
-  margin-right: 7px;
-
+.trainingWrap {
+  width: 33px;
+  height: 33px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin-right: 2px;
   &:hover,
-  &:focus {
-    fill: #f5f7fa;
+  :focus {
+    background-color: #f5f7fa;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   }
 }
 
+.training {
+  cursor: pointer;
+}
+
 .activeTraining {
-  color: #f5f7fa;
+  background-color: #f5f7fa;
+  border-radius: 50%;
+}
+
+.homeWrap {
+  width: 33px;
+  height: 33px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  margin-left: 2px;
+  &:hover,
+  :focus {
+    background-color: #f5f7fa;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  }
 }
 
 .home {
   cursor: pointer;
   margin-right: 1px;
-  &:hover,
-  &:focus {
-    fill: #f5f7fa;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-  }
 }
 
 .lineRight {
   width: 33px;
-  height: 0;
   border: 0.5px solid #e0e5eb;
   transform: rotate(90deg);
 }
 
 .activeHome {
-  color: #f5f7fa;
+  background-color: #f5f7fa;
+  border-radius: 50%;
 }
