--- a/src/pages/LibraryPage/LibraryPage.module.css
+++ b/src/pages/LibraryPage/LibraryPage.module.css
@@ -15,7 +15,7 @@
     }
 }
 
-/* .libraryBtn {
+.libraryBtn {
     display: block;
     height: 40px;
     width: 200px;
@@ -23,4 +23,4 @@
     color: #ffffff;
     border: none;
     margin: 40px auto;
-} */
+}
