--- a/src/components/ResumeContent/ResumeContent.module.scss
+++ b/src/components/ResumeContent/ResumeContent.module.scss
@@ -1,3 +1,11 @@
+.resumeContent {
+    width: 270px;
+    padding: 17px 30px 35px;
+    @media screen and (min-width: 768px) {
+        width: 570px;
+    }
+}
+
 .titleResume {
     display: block;
     font-family: 'Montserrat';
@@ -67,6 +75,9 @@
     background-color: var(--white);
     border: 1px solid #242A37;
     box-sizing: border-box;
+    &:hover {
+        border: 1px solid #F25137;
+    }
     @media screen and (min-width: 768px) {
         margin-right: 30px;
     }
@@ -79,6 +90,9 @@
     // background-color: var(--accent-color);
     background-color: #FF6B08;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    &:hover {
+        background: #D15807;
+    }
 }
 
 
