--- a/src/components/common/Modal/Modal.module.scss
+++ b/src/components/common/Modal/Modal.module.scss
@@ -10,20 +10,15 @@
 
 .modal {
   position: absolute;
-  padding: 17px 30px 35px;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 270px;
-  /* width: 100%; */
+  // width: 100%; 
   background-color: #fff;
   border-radius: 3px;
   box-shadow: 10px 10px 20px rgba(9, 30, 63, 0.2);
   /* box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12); */
-  @media screen and (min-width: 768px) {
-    width: 570px;
-  }
 }
 
 .header {
