--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -1,7 +1,7 @@
 .header {
   background-color: #fff;
   height: 60px;
-  box-shadow: 0px 2px 3px rgba(9, 30, 63, 0.1);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   padding-left: 25px;
   padding-top: 16px;
   padding-bottom: 17px;
@@ -12,4 +12,14 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+}
+
+.secWrap {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.lang:hover,
+:focus {
+  transform: scale(1.03);
 }
