Fixed bug in header and added login notification

--- a/src/components/NavLogo/NavLogo.module.css
+++ b/src/components/NavLogo/NavLogo.module.css
@@ -4,7 +4,7 @@
 
 @media screen and (max-width: 767px) {
   .logo {
-    margin-right: 60px;
+    /* margin-right: 60px; */
   }
 }
 /*# sourceMappingURL=NavLogo.module.css.map */
