--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -8,9 +8,10 @@
   font-family: "Montserrat";
   font-weight: 300;
   font-size: 14px;
+  border-bottom: solid 1px black;
 }
 
-.button:after {
+/* .button:after {
   content: "";
   width: 40px;
   background-color: #000;
@@ -24,7 +25,7 @@
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
+} */
 
 .button:hover {
   color: #f25137;
