--- a/src/components/UserMenu/UserMenu.module.css
+++ b/src/components/UserMenu/UserMenu.module.css
@@ -11,9 +11,9 @@
   border-bottom: solid 1px black;
 }
 
-/* .button:after {
+.button:after {
   content: "";
-  width: 40px;
+  width: 42px;
   background-color: #000;
   height: 1px;
   display: block;
@@ -25,7 +25,7 @@
           transition-duration: 250ms;
   -webkit-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-} */
+}
 
 .button:hover {
   color: #f25137;
