--- a/src/components/LineChart/LineChart.module.scss
+++ b/src/components/LineChart/LineChart.module.scss
@@ -1,12 +1,12 @@
-.chartWrap {
-  width: 250px;
-  height: 700px;
-  @media screen and(min-width: 768px) {
-    width: 678px;
-    height: 340px;
-  }
-  @media screen and(min-width: 1280px) {
-    width: 886px;
-    height: 340px;
-  }
-}
+// .chartWrap {
+//   width: 250px;
+//   height: 500px;
+//   @media screen and(min-width: 768px) {
+//     width: 678px;
+//     height: 340px;
+//   }
+//   @media screen and(min-width: 1280px) {
+//     width: 886px;
+//     height: 340px;
+//   }
+// }
