--- a/src/components/LibraryModal/LibraryModal.module.scss
+++ b/src/components/LibraryModal/LibraryModal.module.scss
@@ -13,13 +13,8 @@
 }
 
 .modal {
-  // max-width: calc(100vw - 400px);
-  // max-height: calc(100vh - 5px);
-  // position: absolute;
-  // top: 20%;
-  // left: 30%;
-  // margin: 0 auto;
-  width: 270px;
+  margin: 0 auto;
+  min-width: 270px;
   min-height: 425px;
   padding-left: 15px;
   padding-top: 31px;
@@ -29,7 +24,7 @@
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   @media screen and(min-width: 768px) {
-    width: 570px;
+    min-width: 570px;
     min-height: 270px;
     padding-left: 30px;
     padding-top: 15px;
