--- a/src/components/Datepicker/Datepicker.module.scss
+++ b/src/components/Datepicker/Datepicker.module.scss
@@ -1,4 +1,4 @@
-.container{
+.container {
 // position: static;
 box-sizing: unset;
 display: flex;
@@ -8,10 +8,8 @@ width: 250px;
 height: 42px;
 left: 209px;
 top: 195px;
-// margin-left: 13px;
+margin-left: auto;
+margin-right: auto;
 background: #F6F7FB;
 border: 1px solid #A6ABB9;
-// box-sizing: border-box;
-
 }
-
