--- a/src/components/LineChart/LineChart.module.css
+++ b/src/components/LineChart/LineChart.module.css
@@ -1,19 +1,1 @@
-.chartWrap {
-  width: 270px;
-  height: 290px;
-}
-
-@media screen and (min-width: 768px) {
-  .chartWrap {
-    width: 678px;
-    height: 340px;
-  }
-}
-
-@media screen and (min-width: 1280px) {
-  .chartWrap {
-    width: 886px;
-    height: 340px;
-  }
-}
-/*# sourceMappingURL=LineChart.module.css.map */
+/* No CSS *//*# sourceMappingURL=LineChart.module.css.map */
