--- a/src/components/NavLogo/NavLogo.module.css
+++ b/src/components/NavLogo/NavLogo.module.css
@@ -1,10 +1,5 @@
 .logo {
   cursor: pointer;
-}
-
-@media screen and (max-width: 767px) {
-  .logo {
-    /* margin-right: 60px; */
-  }
+  margin-right: 5px;
 }
 /*# sourceMappingURL=NavLogo.module.css.map */
