--- a/src/components/Alldatepicker/Alldatepicker.module.scss
+++ b/src/components/Alldatepicker/Alldatepicker.module.scss
@@ -24,5 +24,6 @@
 @media screen and (min-width: 768px) {
     .timerInput:last-child {
         margin-top: 0;
+        margin-left: 45px;
     }
 }
