--- a/src/pages/LibraryPage/LibraryPage.module.css
+++ b/src/pages/LibraryPage/LibraryPage.module.css
@@ -5,13 +5,13 @@
 }
 @media screen and (min-width: 768px) {
     .libraryPage {
-        padding: 20px 87px 0; 
+        padding: 20px 87px 60px; 
     }
 }
 
 @media screen and (min-width: 1280px) {
     .libraryPage {
-        padding: 30px 25px 30px 25px; 
+        padding: 30px 25px 60px; 
     }
 }
 
@@ -22,5 +22,5 @@
     background-color: #FF6B08;
     color: #ffffff;
     border: none;
-    margin: 40px auto 0;
+    margin: 40px auto 0 ;
 }
