--- a/src/pages/TrainingPage/TrainingPage.module.css
+++ b/src/pages/TrainingPage/TrainingPage.module.css
@@ -24,10 +24,16 @@
     }
 }
 
+    /* .trainingPageFlex {
+        outline: 1px solid red;
+        display: flex;
+        flex-direction: row-reverse
+    } */
+
 @media screen and (min-width: 1280px) {
     .trainingPageFlex {
+        /* flex-direction: row; */
         display: flex;
-        
     }
 }
 
