--- a/src/components/Alltimer/Alltimer.module.scss
+++ b/src/components/Alltimer/Alltimer.module.scss
@@ -1,12 +1,35 @@
 .container{
-    display: flex;
-    margin: 15px auto 44px;
+    margin: 15px auto 34px;
     justify-content: space-evenly;
     align-items: center;
 }
 
+@media screen and (min-width: 768px) {
+    .container {
+    display: flex;
+    margin: 30px auto 34px;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+        margin: 15px 557px 44px 0;
+    }
+}
+
 .item_container {
-    margin-right: 45px;
     text-align: center;
     color: #898F9F;
+}
+
+// @media screen and (min-width: 768px) {
+//     .item_container {
+    
+//     }
+// }
+
+@media screen and (min-width: 1280px) {
+    .item_container:last-child {
+    margin-left: 45px;
+    }
 }
