adding styles goal timer

--- a/src/components/Alltimer/Alltimer.module.scss
+++ b/src/components/Alltimer/Alltimer.module.scss
@@ -3,10 +3,40 @@
     margin: 15px auto 44px;
     justify-content: space-evenly;
     align-items: center;
+        flex-direction: column;
+
 }
 
 .item_container {
-    margin-right: 45px;
+    margin-right: 0px;
     text-align: center;
     color: #898F9F;
+}
+
+@media screen and (min-width: 768px) {
+    .container {
+        margin: 30px auto 25px auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .container {
+        margin: 25px auto;
+            flex-direction: row;
+
+    }
+}
+
+.item_container:last-child {
+    margin-top: 20px;
+}
+
+@media screen and (min-width: 768px) {
+    .item_container:last-child {
+        margin-top: 0;
+        margin-left: 45px;
+    }
 }
