--- a/src/components/Alltimer/Alltimer.module.scss
+++ b/src/components/Alltimer/Alltimer.module.scss
@@ -2,8 +2,6 @@
     margin: 15px auto 34px;
     justify-content: space-evenly;
     align-items: center;
-        flex-direction: column;
-
 }
 
 @media screen and (min-width: 768px) {
@@ -15,9 +13,17 @@
 
 @media screen and (min-width: 1280px) {
     .container {
-        margin: 15px 557px 44px 0;
+        margin: -30px 350px 44px 0;
     }
 }
+
+// @media screen and (min-width: 1280px) {
+//     .container {
+//         margin: 25px auto;
+//             flex-direction: row;
+
+//     }
+// }
 
 .item_container {
 // margin-right: 0px;
@@ -38,22 +44,15 @@
 //    margin-left: 45px;
 // =======
 
-@media screen and (min-width: 768px) {
-    .container {
-        margin: 30px auto 25px auto;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
-    }
-}
+// @media screen and (min-width: 768px) {
+//     .container {
+//         margin: 30px auto 25px auto;
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-evenly;
+//     }
+// }
 
-@media screen and (min-width: 1280px) {
-    .container {
-        margin: 25px auto;
-            flex-direction: row;
-
-    }
-}
 
 .item_container:last-child {
     margin-top: 20px;
