--- a/src/components/LineChart/LineChart.module.scss
+++ b/src/components/LineChart/LineChart.module.scss
@@ -13,6 +13,7 @@
 
 .chart {
   background-color: #fff;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding-top: 14px;
   padding-left: 21px;
   padding-right: 21px;
