--- a/src/components/TrainingBookList/TrainingBookList.module.css
+++ b/src/components/TrainingBookList/TrainingBookList.module.css
@@ -3,8 +3,21 @@
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 500;
-    font-size: 14px;
-    line-height: 2.71;
+    font-size: 10px;
+    line-height: 3.17;
+}
+
+@media screen and (min-width: 768px) {
+    .booksList {
+        font-size: 14px;
+        line-height: 2.71;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .booksList {
+        border-bottom: 1px solid #E0E5EB;
+    }
 }
 
 .booksListTable {
@@ -12,7 +25,29 @@
     border-top: 1px solid #E0E5EB;
 }
 
+@media screen and (min-width: 768px) {
+    .booksListTable {
+        border-bottom: none;
+    }
+}
 
+@media screen and (min-width: 1280px) {
+    .booksListTable {
+        border-bottom: 1px solid #E0E5EB;
+    }
+}
+
+@media screen and (min-width: 768px) {
+    .tableBorder {
+        border-bottom: 1px solid #E0E5EB;
+    }
+}
+
+@media screen and (min-width: 1280px) {
+    .tableBorder {
+        border-bottom: none;
+    }
+}
 
 .flexCenter {
     display: flex;
