--- a/src/pages/TrainingPage/TrainingPage.module.css
+++ b/src/pages/TrainingPage/TrainingPage.module.css
@@ -48,9 +48,9 @@
     }
 }
 
-.mobileModalTraining {
+/* .mobileModalTraining {
     display: none;
-}
+} */
 
 @media screen and (min-width: 768px) {
     .mobileModalTraining {
