--- a/src/components/LineChart/LineChart.module.scss
+++ b/src/components/LineChart/LineChart.module.scss
@@ -1,6 +1,6 @@
 .chartWrap {
-  // width: 270px;
-  // height: 270px;
+  width: 270px;
+  height: 290px;
   @media screen and (min-width: 768px) {
     width: 678px;
     height: 340px;
@@ -15,8 +15,8 @@
   background-color: #fff;
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
   padding-top: 14px;
-  padding-left: 21px;
-  padding-right: 21px;
+  padding-left: 10px;
+  padding-right: 15px;
   padding-bottom: 5px;
   @media screen and(min-width: 768px) {
     padding-top: 20px;
