styles of hideParts of training components

--- a/src/components/MyGoal/MyGoal.module.css
+++ b/src/components/MyGoal/MyGoal.module.css
@@ -212,7 +212,7 @@
         width: 275px;
         display:flow-root;
         height: 318px;
-        /* margin-top: -115px; */
+        margin-top: -115px;
     }
 } 
 
