--- a/src/components/LibraryModal/LibraryModal.module.css
+++ b/src/components/LibraryModal/LibraryModal.module.css
@@ -22,7 +22,8 @@
 }
 
 .modal {
-  width: 270px;
+  margin: 0 auto;
+  min-width: 270px;
   min-height: 425px;
   padding-left: 15px;
   padding-top: 31px;
@@ -39,7 +40,7 @@
 
 @media screen and (min-width: 768px) {
   .modal {
-    width: 570px;
+    min-width: 570px;
     min-height: 270px;
     padding-left: 30px;
     padding-top: 15px;
